#include <string>

class Obstaculo {
protected:
    std::string tipo;
    int damage;
};
/*aqui sucede algo parecido como en vehiculos, aqui tenemos a los monitos, el aro de fuego, 
el caldero y todo aquello que pueda atacar a manolo (Nuestro personaje Principal)*/
