@startuml Manolo 
class Juego{
    +Ventana()
}
class Manolo{
    -bool vida
    -bool inciado
    -int estado
    -int relojEstado
    -estados
    -sprite
    -float mover
    +Manolo(int, int)
    +void Actualizar()
    +void Saltar()
    +void Muerte()
    +bool ObtenerVida()
    +Obtenerposicion()
    +void Inciado()
    +virtual void draw(RenderTarget, RenderStates)
}
class Obstaculo
{
    -spriteSuperior
    -spriteInferior
    +Obstaculo(sf::Texture,int,int)
    +void Actualizar()
    +bool Colision(sf::IntRect)
    +GetPosicion()
    +virtual void draw(RenderTarget, RenderStates)
}
class Variacion de parametros
{
    -int ultimo
    -int puntaje
    -bool inciado
    -obstaculoT
    -baseT
    -bases
    -obstaculos
    -int posicionUltimoObstaculoPasado
    +Paralaje()
    +void Actualizar()
    +bool Colision(sf::IntRect)
    +void Inciado()
    +int Puntaje();
    +virtual void draw(RenderTarget, RenderStates)
}
class Audio
{
    -puntosManolo
    -golpeManolo
    -vueloManolo
    -punto
    -vuelo
    -golpe
    -musica
    -fuente
    -maxPuntajeT
    -puntajeT
    -int maxPuntaje
    -int puntaje
    -bool incializado,gameOver
    -gameOverT
    -gameOverS
    -inicializadoTextura
    -inicializadoSprite
    +Sonido()
    +void DefinirPuntaje(int)
    +void Incializado(bool)
    +void GameOver()
    +void Vuelo()
    +virtual void draw(RenderTarget, RenderStates)
}
Juego "1" *--  "1" Manolo
Juego "1" *-- " *" Obstaculo 
Juego "1" <-- "1" Vatiacion de parametros
Juego "1" *-- "4" Audio
Paralaje "1" <-- "*" Obstaculo
@enduml